--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -44,11 +44,11 @@
           Board
         </label>
 
-        <input type="text" id="board_id_box" name="query_board_id">
+        <input type="hidden" id="board_id_box" name="query_board_id" value="<%= @the_board.id %>"
       </div>
 
       <button>
-        Create post
+        Add post
       </button>
     </form>
   </div>
